// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentDate /> should render correctly 1`] = `
<span
  className="excerpt small"
>
   • 
  <OverlayTrigger
    defaultOverlayShown={false}
    key="comment-createdAt-comment"
    overlay={
      <_default
        id="comment-createdAt-tooltip-comment"
      >
        <FormattedDate
          day="numeric"
          hour="numeric"
          minute="numeric"
          month="long"
          value={"2018-01-01T23:00:00.000Z"}
          year="numeric"
        />
      </_default>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <span>
      il y a 3 ans
    </span>
  </OverlayTrigger>
  <span>
     • 
    <FormattedMessage
      id="global.edited"
      values={Object {}}
    />
  </span>
</span>
`;

exports[`<CommentDate /> should render correctly with trashed false 1`] = `
<span
  className="excerpt small"
>
   • 
  <OverlayTrigger
    defaultOverlayShown={false}
    key="comment-createdAt-comment"
    overlay={
      <_default
        id="comment-createdAt-tooltip-comment"
      >
        <FormattedDate
          day="numeric"
          hour="numeric"
          minute="numeric"
          month="long"
          value={"2018-01-01T23:00:00.000Z"}
          year="numeric"
        />
      </_default>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <span>
      il y a 3 ans
    </span>
  </OverlayTrigger>
  <span>
     • 
    <FormattedMessage
      id="global.edited"
      values={Object {}}
    />
  </span>
</span>
`;

exports[`<CommentDate /> should render null with createdAt > publishedAt 1`] = `
<span
  className="excerpt small"
>
   • 
  <OverlayTrigger
    defaultOverlayShown={false}
    key="comment-createdAt-comment"
    overlay={
      <_default
        id="comment-createdAt-tooltip-comment"
      >
        <FormattedDate
          day="numeric"
          hour="numeric"
          minute="numeric"
          month="long"
          value={"2019-08-01T22:00:00.000Z"}
          year="numeric"
        />
      </_default>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <span>
      il y a 2 ans
    </span>
  </OverlayTrigger>
</span>
`;
